# hive-vision

./: .gitignore  CLAUDE.md  README.md  plan.md  predict.py  pyproject.toml
hivevision/: __init__.py  cli.py  detector.py  geometry.py  pieces.py  render.py
hivevision/capture/: __main__.py  app.py
hivevision/capture/static/: index.html  index.js  label.html  label.js  style.css
hivevision/data/: blob.py  store.py  sync.py  yolo_pose_export.py
scripts/: check_lattice.py  eval_detector.py  push_model.py  train_detector.py  ui_shot.py
tests/: test_geometry.py  test_render.py  test_store.py  test_yolo_pose_export.py
