[project]
name = "hivevision"
version = "0.1.0"
description = "Read a Hive position from a photo and output the board state, generalizing across piece sets, surfaces, and environments."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Wouter de Vries" }]

# Pins use upper bounds on volatile deps (see plan.md). numpy<2 is deliberate:
# NumPy 2.x breaks against the OpenCV builds we use. torch/torchvision are NOT
# here yet — they arrive in Phase 3 (detector) via a cu128 index, mirroring
# chess-vision. Phases 0-2 (scaffold, geometry, capture/label app) are CPU-only.
dependencies = [
    "fastapi>=0.110,<1",
    "numpy>=1.26,<2",
    "opencv-python>=4.9,<4.12",
    "pillow>=10.3,<12",
    "python-dotenv>=1.2.2,<2",
    "python-multipart>=0.0.9,<1",
    "uvicorn[standard]>=0.27,<1",
]

[project.scripts]
hivevision = "hivevision.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hivevision"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pytest>=8.2,<9",
    "ruff>=0.6,<0.13",
]
